Fix: MT-1338 regulation detail summary (#564)
* Fix: MT-1338 regulation styling
- fix styling for regulation heading

* Fix: support for printing

* Fix: remove spacing

- was too much

--- a/src/scss/components/_article.scss
+++ b/src/scss/components/_article.scss
@@ -19,6 +19,7 @@
   section > details,
   section + .disclosure {
     margin-top: var(--space-section);
+    margin-bottom: var(--space-section);
   }
 
   &.children-full-width {
