--- a/src/scss/components/_disclosure.scss
+++ b/src/scss/components/_disclosure.scss
@@ -30,7 +30,7 @@
 
     padding: 0 0 var(--spacer-x-small) 0;
 
-    h3 {
+    > h3 {
       margin-top: var(--space-content);
     }
   }
